--- a/praticeTestCourse/package.json
+++ b/praticeTestCourse/package.json
@@ -1,14 +1,15 @@
 {
   "name": "praticetestcourse",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "0.0.1",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
-    "vite": "^6.3.5"
+    "@vitejs/plugin-react": "^4.0.0",
+    "gh-pages": "^5.0.0",
+    "vite": "^4.0.0"
   }
 }
